backend/backendyaml/backend-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: studentapp-deployment
  
  labels:
    app: studentapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: studentapp-backend
  template:
    metadata:
      labels:
        app: studentapp-backend
    spec:
      containers:
        - name: my-backend
          image:  omkarsahastrabudhe/easycrudbackend:v4
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
