backend/backendyaml/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
   name: studentapp-backend-svc
   labels:
     app: studentapp
spec:
   type: ClusterIP
   selector:
       app: studentapp-backend
   ports:
     - port: 8080
       targetPort: 8080
