backend/backendyaml/ingressCLass.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: center-ingress
  labels:
    app: studentapp
spec:
  ingressClassName: nginx 
  rules:
  - host:  a5a6199f8d112411c8370dd14e4986ad-1034966434.ap-south-1.elb.amazonaws.com  
    http:
      paths:
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: studentapp-backend-svc
            port: 
              number: 8080
